Airflow/logs/dag_id=write_to_postgresql/run_id=manual__2024-01-18T13:55:45.002082+00:00/task_id=create_table/attempt=1.log
[2024-01-18T15:55:48.669+0200] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: write_to_postgresql.create_table manual__2024-01-18T13:55:45.002082+00:00 [queued]>
[2024-01-18T15:55:48.674+0200] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: write_to_postgresql.create_table manual__2024-01-18T13:55:45.002082+00:00 [queued]>
[2024-01-18T15:55:48.674+0200] {taskinstance.py:2171} INFO - Starting attempt 1 of 1
[2024-01-18T15:55:48.695+0200] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): create_table> on 2024-01-18 13:55:45.002082+00:00
[2024-01-18T15:55:48.696+0200] {standard_task_runner.py:60} INFO - Started process 18587 to run task
[2024-01-18T15:55:48.699+0200] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'write_to_postgresql', 'create_table', 'manual__2024-01-18T13:55:45.002082+00:00', '--job-id', '212', '--raw', '--subdir', 'DAGS_FOLDER/write_to_postgresql.py', '--cfg-path', '/tmp/tmpkxg034a1']
[2024-01-18T15:55:48.700+0200] {standard_task_runner.py:88} INFO - Job 212: Subtask create_table
[2024-01-18T15:55:48.735+0200] {task_command.py:423} INFO - Running <TaskInstance: write_to_postgresql.create_table manual__2024-01-18T13:55:45.002082+00:00 [running]> on host DESKTOP-9NHC01K.
[2024-01-18T15:55:48.792+0200] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='write_to_postgresql' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-01-18T13:55:45.002082+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-18T13:55:45.002082+00:00'
[2024-01-18T15:55:48.793+0200] {sql.py:276} INFO - Executing: 
            CREATE TABLE IF NOT EXIST employees(
            id SERIAL PRIMARY KEY,
            name VARCHAR (255) NOT NULL,
            added_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
            );
            
[2024-01-18T15:55:48.798+0200] {base.py:83} INFO - Using connection ID 'my_postgres_cnn' for task execution.
[2024-01-18T15:55:48.821+0200] {base.py:83} INFO - Using connection ID 'my_postgres_cnn' for task execution.
[2024-01-18T15:55:48.833+0200] {sql.py:450} INFO - Running statement: 
            CREATE TABLE IF NOT EXIST employees(
            id SERIAL PRIMARY KEY,
            name VARCHAR (255) NOT NULL,
            added_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
            );
            , parameters: None
[2024-01-18T15:55:48.834+0200] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/mahmoud/airflow_env/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/mahmoud/airflow_env/lib/python3.10/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/mahmoud/airflow_env/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/mahmoud/airflow_env/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "EXIST"
LINE 2:             CREATE TABLE IF NOT EXIST employees(
                                        ^

[2024-01-18T15:55:48.838+0200] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=write_to_postgresql, task_id=create_table, execution_date=20240118T135545, start_date=20240118T135548, end_date=20240118T135548
[2024-01-18T15:55:48.853+0200] {standard_task_runner.py:107} ERROR - Failed to execute job 212 for task create_table (syntax error at or near "EXIST"
LINE 2:             CREATE TABLE IF NOT EXIST employees(
                                        ^
; 18587)
[2024-01-18T15:55:48.871+0200] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-18T15:55:48.885+0200] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
